--- a/css/design.css
+++ b/css/design.css
@@ -109,9 +109,18 @@ li {
 }
 
 .orientir {
-  position: fixed;
-  fill: white;
+  position: absolute;
+  color: var(--tool-text-color);
+  
 }
+
+.y0 {top: 3em;}
+.y1 {top: 93.5em;}
+.y2 {top: 190em;}
+.x0 {left: 0.5em;}
+.x1 {left: 107em;}
+.x2 {left: 215em;}
+
 /* plant bloom colors and additional info, below text name */
 .plantDetails {
   padding: 3px;
@@ -150,6 +159,9 @@ li {
 
 svg {
   font-family: FontAwesome;
+/* 	z-index: -1; */
+/* 	float: right; */
+/* 	margin-top: -1%; */
 }
 
 /* the following list format is used in NavBar settings button dd, Add plant/garden dd */
